# terminal-screen

./: .gitignore  AUTHORS  LICENSE  Makefile  README.md  doc  dune-project  terminal_screen.opam
.github/workflows/: ci.yml
lib/: clear_screen.ml  clear_screen.mli  draw_at_cursor.ml  draw_at_cursor.mli  draw_character.ml  draw_character.mli  draw_line.ml  draw_line.mli  dune  move_cursor.ml  move_cursor.mli  render_text.ml  render_text.mli  screen.ml  screen.mli  terminal_screen.ml
terminal_screen/: .ocamlformat  dune-project  terminal_screen.opam
terminal_screen/.github/workflows/: ci.yml
terminal_screen/lib/: dune  screen.ml  screen.mli
terminal_screen/test/: dune
test/: dune  test_terminal_screen.ml
